correct work item spacing during office hours

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ header {
   background-color: var(--header-color);
   position: sticky;
   top: 0;
-  z-index: 99;  
+  z-index: 99;
   padding: 15px 0;
 }
 
@@ -63,10 +63,12 @@ header .nav ul {
   align-items: center;
   /* align-content: center; */
 }
+
 header .nav ul li {
   margin: 0px 25px;
   align-items: center;
 }
+
 /* end header footer */
 
 /* Hero section */
@@ -122,7 +124,7 @@ header .nav ul li {
 
 .work-section {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   flex-wrap: wrap;
   border-left: solid var(--alt-text-bg-color);
   width: 75%;
@@ -131,8 +133,12 @@ header .nav ul li {
 
 .work-section a {
   display: flex;
-  width: 100%;
+  width: 48%;
   text-decoration: none;
+}
+
+.work-section .first-item {
+  width: 100%;
 }
 
 .me, .contact-list {
@@ -160,11 +166,6 @@ header .nav ul li {
   border-top-left-radius: 175px;
   border-bottom-right-radius: 175px;
   height: 750px;
-}
-
-.work-section {
-  display: block;
-  width: 100%;
 }
 
 .work-titles {
@@ -216,7 +217,7 @@ footer ul {
 
 .right-radius {
   border-top-right-radius: 0px;
-  border-bottom-right-radius: 25px ;
+  border-bottom-right-radius: 25px;
 }
 
 @media(min-width:768px) {}
